# lightrag-mcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
lightrag_mcp/: __init__.py  server.py
