[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightrag-mcp"
version = "0.1.0"
description = "MCP server for LightRAG — expose any LightRAG instance to Claude Code"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["mcp", "lightrag", "rag", "claude", "llm", "local-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
lightrag-mcp = "lightrag_mcp.server:run"

[project.urls]
Homepage = "https://github.com/Ricardo-Kaminski/lightrag-mcp"
Repository = "https://github.com/Ricardo-Kaminski/lightrag-mcp"
Issues = "https://github.com/Ricardo-Kaminski/lightrag-mcp/issues"
Documentation = "https://github.com/Ricardo-Kaminski/local-rag"
